--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,17 @@ jobs:
       uses: actions/checkout@v2
     - name: Test
       run: go test -v ./...
-    - name: Release
+  release:
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.14.x
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: goreleaser
       uses: goreleaser/goreleaser-action@v1
       with:
         version: latest
